public interface FlightCheck {
    public boolean isCrewComplete();
    public boolean isSameLanguage();
    public boolean isReadyToFlight();
    public boolean pilotsHasCompass();
}
