public enum Language {
    ENGLISH,
    GERMAN,
    SPANISH,
    POLISH
}
